<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
            <ImageView
                android:id="@+id/Image_entry"
                android:layout_width="413dp"
                android:layout_height="400dp"
                android:adjustViewBounds="true"
                android:scaleType="fitXY"
                android:src="@drawable/resky" />


        <TextView
            android:id="@+id/tvJudul_entry"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginTop="25sp"
            android:text="@string/judul"
            android:textColor="@android:color/black"
            android:textSize="32sp"
            android:fontFamily="@font/extrabold"/>
        <TextView
            android:id="@+id/tvDetail_entry"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:lineSpacingMultiplier="1"
            android:text="@string/detail"
            android:textSize="20sp"
            android:textColor="@android:color/black" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:textColor="@android:color/black"
            android:text="@string/berikut_ini_adalah_cara_membuatnya"
            android:textSize="18sp" />

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp">

                <TextView
                    android:textColor="@android:color/black"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="16dp"
                    android:layout_marginRight="16dp"
                    android:text="@string/bahan_bahan"
                    android:textSize="15sp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/detail_bahan"
                    android:textColor="@android:color/black"
                    android:id="@+id/tvBahan_entry"
                    android:textSize="15sp" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="16dp"
                    android:layout_marginRight="16dp"
                    android:text="@string/langkah"
                    android:textColor="@android:color/black"
                    android:textSize="15sp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/detail_langkah"
                    android:id="@+id/tvLangkah_entry"
                    android:textColor="@android:color/black"
                    android:textSize="15sp" />
            </TableRow>
        </TableLayout>
    </LinearLayout>
</ScrollView>
