<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".adapter.about_me"
    android:background="@color/colorPrimary">



    <ImageView
        android:id="@+id/rectimage1"
        android:layout_width="match_parent"
        android:layout_height="500dp"
        android:layout_marginTop="164dp"
        android:background="@android:color/white"
        android:src="@drawable/kotak1"
        app:layout_constraintTop_toTopOf="@+id/circleImageView"
        tools:layout_editor_absoluteX="0dp"></ImageView>

    <ImageView
        android:id="@+id/rectimage2"
        android:layout_width="350dp"
        android:layout_height="300dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="76dp"
        android:layout_marginEnd="8dp"
        android:src="@drawable/kotak2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.488"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/circleImageView" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:fontFamily="@font/extrabold"
        android:text="@string/nama_diri"
        android:textColor="@android:color/white"
        android:textSize="30dp"
        app:layout_constraintEnd_toEndOf="@+id/rectimage2"
        app:layout_constraintHorizontal_bias="0.507"
        app:layout_constraintStart_toStartOf="@+id/rectimage2"
        app:layout_constraintTop_toBottomOf="@+id/circleImageView" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="183dp"
        android:layout_height="28dp"
        android:layout_marginTop="32dp"
        android:fontFamily="@font/thin"
        android:text="@string/email"
        android:textColor="@android:color/white"
        android:textSize="20dp"
        app:layout_constraintEnd_toEndOf="@+id/rectimage2"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="@+id/rectimage2"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="8dp"
        android:fontFamily="@font/thin"
        android:text="@string/inspired"
        android:textColor="@android:color/white"
        android:textSize="7dp"
        app:layout_constraintEnd_toEndOf="@+id/textView2"
        app:layout_constraintHorizontal_bias="0.555"
        app:layout_constraintStart_toStartOf="@+id/textView2"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/circleImageView"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="64dp"
        android:layout_marginEnd="8dp"
        android:src="@drawable/resky"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>